# pythonShell

./: .gitignore  README.md  _func.py  git-config  install.py  main.py  pyproject.toml  python2.7.exe.stackdump  run_tests_fixed.py  uninstall.py
Git/: git_commit.py  git_configuration.py  git_create_repository.py  git_pull_remote.py  git_push_remote.py  git_show_log.py  git_show_status.py  gitbook_push.py
MacOSX/: install_gnu_tool.py
VCS/: git_create_repository.py  git_push_remote.py
create_project/: Create_book_project.py  create_translation_project.py
cygwin/: install_apt_cyg.py
cygwin&babun/: install_apt_cyg.py  install_oh_myzsh.py  sshdir_perimissions_config.py  sshdir_permissions_config.py
fix_scripts/: fix_encoding.py  run_tests.sh  test_encoding_fix.py  verify_fix.sh
git_tools/: git_pull_remote.py
helloworld/: hello_c.py  hello_cpp.py  hello_python.py  hello_ruby.py
helloworld/src/: .test_c.c.un~  test_c.c  test_cpp.cpp
helloworld/tmp/: test_c.c  test_cpp.cpp
macos_tools/: mac_install_gnu_tool.py
net_tool/: open_ssh_proxy.py
network_operation/: open_ssh_proxy.py
project_manage/: Create_book_project.py  create_translation_project.py  git_configuration.py  git_create_repository.py  git_pull_remote.py  git_push_remote.py
python_shell_utilities/: common.py  create_book_project.py  create_translation_project.py  git_configuration.py  git_push_remote.py
shell/: cygwin_install_apt_cyg.py  install_oh_myzsh.py  mac_install_gnu_tool.py  open_ssh_proxy.py  sshdir_permissions_config.py  sshkey_configure.py
shell_configure/: install_oh_myzsh.py  mac_install_gnu_tool.py  sshdir_permissions_config.py  sshkey_configure.py
src/: Create_book_project.py  __init__.py  bootstrap.py  common.py  create_book_project.py  create_translation_project.py  git_configuration.py  git_create_repository.py  git_pull_remote.py  git_push_remote.py  locale_init.py  open_ssh_proxy.py  sshkey_configure.py
test/: __init__.py  conftest.py  test_common.py  test_create_book_project.py  test_create_translation_project.py  test_git_configuration.py  test_git_create_repository.py  test_git_operations.py  test_git_pull_remote.py  test_git_push_remote.py  test_integration.py  test_open_ssh_proxy.py  test_project_scaffolding.py  test_ssh_operations.py  test_sshkey_configure.py
tmp/test1/: README.md
tmp/test2/: README.md
zsh/: install_oh_myzsh.py
