[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-shell-utilities"
version = "0.1.0"
authors = [
    { name = "Ling Jie", email = "jie.owl2008@gmail.com" },
]
description = "A collection of command-line tools for developer automation, including Git operations and project scaffolding."
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
# Runtime dependencies for the core scripts
dependencies = [
    "pexpect"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/owlman/pythonShell"
Issues = "https://github.com/owlman/pythonShell/issues"

[project.scripts]
# Git Tools
git-config = "src.git_configuration:main"
git-create-repo = "src.git_create_repository:main"
git-pull-remote = "src.git_pull_remote:main"
git-push-remote = "src.git_push_remote:main"

# SSH Tools
ssh-proxy = "src.open_ssh_proxy:main"
ssh-key-config = "src.sshkey_configure:main"

# Project Scaffolding Tools
create-book = "src.create_book_project:main"
create-translation = "src.create_translation_project:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
# Include the template zip files in the package
"src.template" = ["*.zip"]

[tool.ruff]
# Optional: Ruff linter configuration
line-length = 88
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]