[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-shell-utilities"
version = "0.1.0"
authors = [
    { name = "Ling Jie", email = "jie.owl2008@gmail.com" },
]
description = "A powerful collection of command-line tools designed to automate common developer tasks, including Git operations, SSH configuration, and project scaffolding"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["git", "ssh", "automation", "cli", "developer-tools", "scaffolding", "shell", "utilities"]
dependencies = [
    "pexpect>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/owlman/pythonShell"
Repository = "https://github.com/owlman/pythonShell.git"
Issues = "https://github.com/owlman/pythonShell/issues"
Documentation = "https://github.com/owlman/pythonShell/blob/main/README.md"

[project.scripts]
# Git tools
git-config = "src.git_configuration:main"
git-create-repo = "src.git_create_repository:main"
git-pull-remote = "src.git_pull_remote:main"
git-push-remote = "src.git_push_remote:main"

# SSH tools
ssh-proxy = "src.open_ssh_proxy:main"
ssh-key-config = "src.sshkey_configure:main"

# Project scaffolding tools
create-book = "src.create_book_project:main"
create-translation = "src.create_translation_project:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
# Include the template zip files in the package
"src.template" = ["*.zip"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "T20", # flake8-print
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"test/*" = ["T20"]  # allow print in tests
"src/*" = ["T20"]  # Allow print in source code as these are command-line tools

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Project has untyped code
disallow_incomplete_defs = false  # Project has incomplete type definitions
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config --cov=src --cov-report=term-missing"
testpaths = [
    "test",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "git: marks tests related to git operations",
    "ssh: marks tests related to ssh operations",
    "scaffolding: marks tests related to project scaffolding",
]
